# sisyphus

./: README.md
backend/: .gitignore  Makefile  pyproject.toml
backend/configs/: README.md  linkedin_search.yaml.example
backend/sisyphus/: server.py
backend/sisyphus/cover_letter/: notes.txt
backend/sisyphus/funding/: funding.py
backend/sisyphus/glassdoor/: glassdoor.py
backend/sisyphus/linkedin/: linkedin.py
backend/tests/: test_funding.py  test_glassdoor.py  test_linkedin.py
frontend/sisyphus/: index.html  package-lock.json  package.json
frontend/sisyphus/src/: App.css  App.tsx
frontend/sisyphus/src/components/: ApplicationInfo.tsx  JobInfo.tsx  JobSources.tsx
frontend/sisyphus/src/utils/: utils.ts
